src/z80asm/z80asm2/t/30-directive/expected/incbin_23.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/incbin_23.asm
Assembling t/30-directive/input/incbin_23.asm...
t/30-directive/input/incbin_23.asm:1:27: error: Unexpected token after BINARY: extra
    incbin file_not_found.bin extra
                              ^
t/30-directive/input/incbin_23.asm:1:8: error: File not found: file_not_found.bin
    incbin file_not_found.bin extra
           ^
